--- a/locale/flarum-subscriptions.yml
+++ b/locale/flarum-subscriptions.yml
@@ -9,18 +9,18 @@ flarum-subscriptions:
 
     # These translations are displayed as tooltips for discussion badges.
     badge:
-      following_tooltip: => flarum-subscriptions.ref.following
-      ignoring_tooltip: => flarum-subscriptions.ref.ignoring
+      following_tooltip: flarum-subscriptions.ref.following
+      ignoring_tooltip: flarum-subscriptions.ref.ignoring
 
     # These translations are used by the discussion control buttons.
     discussion_controls:
-      follow_button: => flarum-subscriptions.ref.follow
+      follow_button: flarum-subscriptions.ref.follow
       unfollow_button: Deixar de Seguir
       unignore_button: Deixar de Ignorar
 
     # These translations are used on the index page, peripheral to the discussion list.
     index:
-      following_link: => flarum-subscriptions.ref.following
+      following_link: flarum-subscriptions.ref.following
 
     # These translations are used by the Notifications dropdown, a.k.a. "the bell".
     notifications:
@@ -33,10 +33,10 @@ flarum-subscriptions:
 
     # These translations are used in the subscription menu displayed to the right of the post stream.
     sub_controls:
-      follow_button: => flarum-subscriptions.ref.follow
-      following_button: => flarum-subscriptions.ref.following
+      follow_button: flarum-subscriptions.ref.follow
+      following_button: flarum-subscriptions.ref.following
       following_text: Seja notificado de todas as respostas.
-      ignoring_button: => flarum-subscriptions.ref.ignoring
+      ignoring_button: flarum-subscriptions.ref.ignoring
       ignoring_text: Nunca seja notificado. Oculta da lista de discussão.
       not_following_button: Não Seguindo
       not_following_text: "Seja notificado apenas quando @mencionado."
