--- a/locale/flagrow-ads.yml
+++ b/locale/flagrow-ads.yml
@@ -8,10 +8,10 @@ flagrow-ads:
                 placeholder: Insira seu código de anúncio aqui.
             between-posts:
                 title: Anúncio entre as postagens
-                placeholder: => flagrow-ads.admin.positions.under-header.placeholder
+                placeholder: flagrow-ads.admin.positions.under-header.placeholder
             under-nav-items:
                 title: Anúncio na coluna da esquerda sob as tags
-                placeholder: => flagrow-ads.admin.positions.under-header.placeholder
+                placeholder: flagrow-ads.admin.positions.under-header.placeholder
         settings:
             start-from-post: A partir de qual postagem começar a mostrar o anúncio?
             between-n-posts: Depois de quantas postagens mostrar o anúncio?
