--- a/locale/flarum-likes.yml
+++ b/locale/flarum-likes.yml
@@ -16,7 +16,7 @@ flarum-likes:
 
     # These translations are used by the Notifications dropdown, a.k.a. "the bell".
     notifications:
-      others_text: => core.ref.some_others
+      others_text: core.ref.some_others
       post_liked_text: "{username} curtiu seu post|{username} curtiram seu post" # Can be pluralized to agree with the number of users!
 
     # These translations are displayed beneath individual posts.
@@ -24,9 +24,9 @@ flarum-likes:
       like_link: Curtir
       liked_by_self_text: "{users} curtiu isso.|{users} curtiram isso." # Can be pluralized to agree with the number of users!
       liked_by_text: "{users} curtiu isso.|{users} curtiram isso."
-      others_link: => core.ref.some_others
+      others_link: core.ref.some_others
       unlike_link: Descurtir
-      you_text: => core.ref.you
+      you_text: core.ref.you
 
     # These translations are used by the Users Who Like This modal dialog.
     post_likes:
