--- a/locale/flarum-mentions.yml
+++ b/locale/flarum-mentions.yml
@@ -14,7 +14,7 @@ flarum-mentions:
 
     # These translations are used by the Notifications dropdown, a.k.a. "the bell".
     notifications:
-      others_text: => core.ref.some_others
+      others_text: core.ref.some_others
       post_mentioned_text: "{username} respondeu ao seu post|{username} responderam ao seu post" # Can be pluralized to agree with the number of users!
       user_mentioned_text: "{username} mencionou você"
 
@@ -22,10 +22,10 @@ flarum-mentions:
     post:
       mentioned_by_self_text: "{users} respondeu a isso.|{users} responderam a isso." # Can be pluralized to agree with the number of users!
       mentioned_by_text: "{users} respondeu a isso.|{users} responderam a isso." # Can be pluralized to agree with the number of users!
-      others_text: => core.ref.some_others
+      others_text: core.ref.some_others
       quote_button: Citar
-      reply_link: => core.ref.reply
-      you_text: => core.ref.you
+      reply_link: core.ref.reply
+      you_text: core.ref.you
 
     # These translations are used in the Settings page.
     settings:
