--- a/locale/flarum-pusher.yml
+++ b/locale/flarum-pusher.yml
@@ -20,4 +20,4 @@ flarum-pusher:
 
     # These translations are used in the discussion list.
     discussion_list:
-    show_updates_text: "Mostrar {count} discussão atualizada|Mostrar {count} discussões atualizadas"
+      show_updates_text: "Exibir {count} discussão atualizada|Exibir {count} discussões atualizadas"
