--- a/locale/flarum-statistics.yml
+++ b/locale/flarum-statistics.yml
@@ -10,11 +10,11 @@ flarum-statistics:
     # These translations are used in the Statistics dashboard widget.
     statistics:
       active_users_text: "{count} ativos"
-      discussions_heading: => core.ref.discussions
+      discussions_heading: core.ref.discussions
       last_12_months_label: Últimos 12 meses
       last_28_days_label: Últimos 28 dias
       last_7_days_label: Últimos 7 dias
-      posts_heading: => core.ref.posts
+      posts_heading: core.ref.posts
       today_label: Hoje
       total_label: Total
-      users_heading: => core.ref.users
+      users_heading: core.ref.users
