--- a/locale/fof-links.yml
+++ b/locale/fof-links.yml
@@ -13,22 +13,22 @@ fof-links:
       delete_link_confirmation: "Tem certeza que deseja apagar esse link?"
       internal_link: "É um flarum link?"
       open_newtab: "Abrir link em nova aba"
-      submit_button: => core.ref.save_changes
-      title: => fof-links.ref.create_link
-      title_label: => fof-links.ref.title
-      title_placeholder: => fof-links.ref.title
-      url_label: => fof-links.ref.url
-      url_placeholder: => fof-links.ref.url
+      submit_button: core.ref.save_changes
+      title: fof-links.ref.create_link
+      title_label: fof-links.ref.title
+      title_placeholder: fof-links.ref.title
+      url_label: fof-links.ref.url
+      url_placeholder: fof-links.ref.url
 
     # These strings are used in the Links page.
     links:
       about_text: Gerenciar links primários do menu.
-      create_button: => fof-links.ref.create_link
-      links: => fof-links.ref.links
+      create_button: fof-links.ref.create_link
+      links: fof-links.ref.links
 
     # These strings are used in the navigation bar.
     nav:
-      links_button: => fof-links.ref.links
+      links_button: fof-links.ref.links
       links_text: Gerenciar itens primários da lista de navegação.
 
   # Strings in this namespace are referenced by two or more unique keys.
