--- a/locale/fof-pages.yml
+++ b/locale/fof-pages.yml
@@ -9,36 +9,36 @@ fof-pages:
 
     # These strings are used in the Edit Page modal dialog.
     edit_page:
-      content_label: => fof-pages.ref.content
-      content_placeholder: => fof-pages.ref.content
+      content_label: fof-pages.ref.content
+      content_placeholder: fof-pages.ref.content
       delete_page_button: Apagar Página
       delete_page_confirmation: "Tem certeza que deseja apagar essa página?"
       hidden_label: Salvar Rascunho
       html_label: Ativar HTML
       set_as_home_page_confirmation: "Tem certeza que deseja estabelecer essa pagina como home?"
-      slug_label: => fof-pages.ref.slug
-      slug_placeholder: => fof-pages.ref.slug
-      submit_button: => core.ref.save_changes
-      title: => fof-pages.ref.create_page
-      title_label: => fof-pages.ref.title
-      title_placeholder: => fof-pages.ref.title
-      url_label: => fof-pages.ref.url
-      url_placeholder: => fof-pages.ref.url
+      slug_label: fof-pages.ref.slug
+      slug_placeholder: fof-pages.ref.slug
+      submit_button: core.ref.save_changes
+      title: fof-pages.ref.create_page
+      title_label: fof-pages.ref.title
+      title_placeholder: fof-pages.ref.title
+      url_label: fof-pages.ref.url
+      url_placeholder: fof-pages.ref.url
 
     # These strings are used in the pages page.
     nav:
-      pages_button: => fof-pages.ref.pages
+      pages_button: fof-pages.ref.pages
       pages_text: Criar Página de Estatísticas Customizada
 
     # Strings in this namespace are referenced by two or more unique keys.
     pages:
       about_text: Criar e Gerencias Páginas de Estatísticas
-      create_button: => fof-pages.ref.create_page
+      create_button: fof-pages.ref.create_page
 
     # These strings are used in the pages list.
     pages_list:
       empty_text: Parece que não há páginas aqui.
-      title: => fof-pages.ref.title
+      title: fof-pages.ref.title
 
   # These strings are used in the navigation bar.
   ref:
