--- a/locale/hyn-guardian.yml
+++ b/locale/hyn-guardian.yml
@@ -5,8 +5,8 @@ hyn-guardian:
     never: nunca
   admin:
     nav:
-      guardian_button: => hyn-guardian.package_name
-      guardian_text: => hyn-guardian.package_description
+      guardian_button: hyn-guardian.package_name
+      guardian_text: hyn-guardian.package_description
     grid:
       user:
         joined_at: Registrou
@@ -15,4 +15,4 @@ hyn-guardian:
         activated: Ativo
         details: Detalhes
         states:
-          never_visited: => hyn-guardian.generic.never
+          never_visited: hyn-guardian.generic.never
