--- a/locale/fof-merge-discussions.yml
+++ b/locale/fof-merge-discussions.yml
@@ -4,10 +4,10 @@ fof-merge-discussions:
       title: Mesclar discussões
       help_text: Escolha as discussões para mesclar à <b>{title}</b>.
       load_preview_button: Visualizar
-      submit_button: fof-merge-discussions.ref.merge
+      submit_button: => fof-merge-discussions.ref.merge
 
     discussion:
-      merge: fof-merge-discussions.ref.merge
+      merge: => fof-merge-discussions.ref.merge
 
     post:
       merged: Mesclou <b>{count}</b> postagem de {titles}.|Mesclou <b>{count}</b> postagens de {titles}.
