--- a/locale/flagrow-linguist.yml
+++ b/locale/flagrow-linguist.yml
@@ -13,7 +13,7 @@ flagrow-linguist:
         placeholder:
             not-translated: Não traduzido
             all-locales: O texto definido aqui será mostrado em todos os idiomas
-            hint: Original:
+            hint: Valor Original
         filters:
             search: Pesquisar sequências de tradução ...
             with-own-translations: Minhas traduções
