--- a/locale/flagrow-linguist.yml
+++ b/locale/flagrow-linguist.yml
@@ -1,7 +1,7 @@
 flagrow-linguist:
     admin:
         menu:
-            title: Linguista
+            title: Linguist
             description: Personalize as traduções.
         buttons:
             apply: Aplicar
