--- a/locale/flarum-markdown.yml
+++ b/locale/flarum-markdown.yml
@@ -1,19 +1,12 @@
 flarum-markdown:
-
-  ##
-  # UNIQUE KEYS - The following keys are used in only one location each.
-  ##
-
-  # Translations in this namespace are used by the forum user interface.
   forum:
-
-    # These translations are used by the composer (emoji autocompletion function).
     composer:
-      bold_tooltip: Adicionar negrito
-      code_tooltip: Inserir código
-      header_tooltip: Adicionar texto de cabeçalho
-      italic_tooltip: Adicionar texto itálico
-      link_tooltip: Adicionar um link
+      bold_tooltip: Adicionar texto em negrito
+      code_tooltip: Insira Código
+      header_tooltip: Adicionar texto do cabeçalho
+      image_tooltip: Adicionar uma imagem
+      italic_tooltip: Adicionar texto em itálico
+      link_tooltip: Adicione um link
       ordered_list_tooltip: Adicionar uma lista numerada
-      quote_tooltip: Inserir uma citação
-      unordered_list_tooltip: Adicionar uma lista não numerada
+      quote_tooltip: Inserir uma cotação
+      unordered_list_tooltip: Adicionar uma lista com marcadores
