--- a/locale/core.yml
+++ b/locale/core.yml
@@ -218,7 +218,7 @@ core:
       body_placeholder: "=> core.ref.write_a_reply"
       discard_confirmation: Você não postou sua resposta. Deseja descartá-la?
       posted_message: Sua resposta foi postada.
-      submit_button: Responder ao post
+      submit_button: Responder
       view_button: Ver
     discussion_controls:
       cannot_reply_button: Sem permissão.
@@ -399,7 +399,7 @@ core:
       deleted_text: "[excluído]"
   ref:
     all_discussions: Todas as discussões
-    change_email: Mude e-mail
+    change_email: Mudar e-mail
     change_password: Mudar senha
     color: Cor
     confirm_password: Confirme a Senha
